# Traffic-Flow-Fundamental-Diagram

./: .gitignore  03_calibrate_fundamental_diagram.py  README.md  calibrate_fundamental_diagram.py  fundamental_diagram_model.py  pyproject.toml  requirements.txt  setup.py  tes1.ipynb
.ipynb_checkpoints/: fundamental_diagram_calibration-checkpoint.ipynb
FD_Calibration_S3_Adam_algorithm/: fundamental_diagram_calibration_S3.ipynb  fundamental_diagram_calibration_S3.py  notes.txt
FD_Calibration_S3_Adam_algorithm/.ipynb_checkpoints/: fundamental_diagram_calibration_S3-checkpoint.ipynb
FD_Calibration_Traffic_models/: fundamental_diagram_calibration.ipynb  fundamental_diagram_calibration.py  fundamental_diagram_models.py
Fundamental_Diagram_Calibration_Traffic_models/: fundamental_diagram_calibration.py  fundamental_diagram_models.py
NewResults/FD/: 03_calibrate_fundamental_diagram.py
TrafficFlowFD/: __init__.py
Traffic_Model_Calibration S3/Calibrate S3 with Python/: Calibrate_S3.py
data/demo_data_traffic_models_1/: Reading.csv
data/demo_data_traffic_models_adot/: adot_formatted_data_6am_8pm_main.csv  adot_formatted_data_6am_8pm_ramp.csv
tests/: read.txt
traffic_flow_foundamental_diagram/: __init__.py  foundamental_models.py
